--- a/sales.html
+++ b/sales.html
@@ -1,17 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Salmon Cookies</title>
+    <title>Salmon Sales Cookies</title>
 </head>
-
-<body class="container">
+<body class="container-sales">
     <header>
         <nav>
             <ul class="top">
@@ -35,23 +32,18 @@
                             <a href="https://www.instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
                         </li>
                         <li>
-                            <a href="#" target="_blank"><i class="fab fa-asymmetrik	"></i></a>
+                            <a href="#" target="_blank"><i class="fab fa-address"></i></a>
                         </li>
                     </ul>
                 </li>
             </ul>
         </nav>
     </header>
-    <main >
-        <section>
-        </section>
-        
+    <main>
+        <h2>Salmon Sales Cookies</h2>
+        <section id="sales"></section>
     </main>
     <footer></footer>
-    <pre>
-    </pre>
     <script src="./js/app.js"></script>
-
 </body>
-
 </html>
