--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Salmon Cookies</title>
+    <title>Pat`s  Salmon Cookies</title>
 </head>
 
 <body class="container">
@@ -18,16 +18,19 @@
                 <li>
                     <img src="./img/salmon.png" alt="salmon logo" width="100" height="60">
                 </li>
-                <h3><strong>Salmon Cookies</strong> Coffe</h3>
+                <h3><strong>Pat`s Salmon Cookies</strong> Coffe</h3>
                 <li class="center">
                     <ul>
-                        <li><a href="">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="">Contact Us</a></li>
                     </ul>
                 </li>
                 <li class="right">
                     <ul>
+                        <li>
+                            <a href="./sales.html" class="button" >Sales Data</a>
+                        </li>
                         <li>
                             <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
                         </li>
