--- a/sales.html
+++ b/sales.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Salmon Sales Cookies</title>
+    <title>Pat`s  Salmon Sales Cookies</title>
 </head>
 <body class="container-sales">
     <header>
@@ -15,10 +15,10 @@
                 <li>
                     <img src="./img/salmon.png" alt="salmon logo" width="100" height="60">
                 </li>
-                <h3><strong>Salmon Cookies</strong> Coffe</h3>
+                <h3><strong>Pat`s  Salmon Cookies</strong> Coffe</h3>
                 <li class="center">
                     <ul>
-                        <li><a href="">Home</a></li>
+                        <li><a href="./index.html">Home</a></li>
                         <li><a href="">About</a></li>
                         <li><a href="">Contact Us</a></li>
                     </ul>
