add content and css

--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Pat`s  Salmon Cookies</title>
+    <title>Pat`s Salmon Cookies</title>
 </head>
 
-<body class="container">
+<body>
     <header>
         <nav>
             <ul class="top">
@@ -29,7 +29,7 @@
                 <li class="right">
                     <ul>
                         <li>
-                            <a href="./sales.html" class="button" >Sales Data</a>
+                            <a href="./sales.html" class="button">Sales Data</a>
                         </li>
                         <li>
                             <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook"></i></a>
@@ -45,16 +45,139 @@
             </ul>
         </nav>
     </header>
-    <main >
-        <section>
+    <pre></pre>
+    <main>
+        <section class="container">
+            <h2>Our Locations</h2>
+            <div>
+                <ul class="locImg">
+                    <li>
+                        <h3> Seattle</h3>
+                        <img src="./img/seattle.jpg" alt="" width="200px" height="200px">
+                        <ul>
+                            <li> <strong>Address :</strong>
+                                <address> (206) 721-8527
+                                    9241 13th Ave SW
+                                    Seattle, Washington(WA), 98106
+                                </address>
+                            </li>
+                            <li>
+                                Open At <em>6:00 AM</em> Close At <dl>7:00 PM</dl>
+                            </li>
+                            <li><strong>Contact US :</strong>
+                                300 CONCORD PARKWAY SOUTH
+                                CONCORD, NC 28027
+                                PHONE: (800) 933-2210
+                                FAX: (800) 950-4378
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>Tokyo</h3>
+                        <img src="./img/tokyo.jpg" alt="" width="200px" height="200px">
+                        <ul>
+                            <li><strong>Address :</strong>
+                                <address>
+                                    203421(TO), 熱海箱根峠線
+                                    250-0521, Tokyo, Kannami
+                                    Japan, JP
+                                </address>
+                            </li>
+                            <li>
+                                Open At <em>6:00 AM</em> Close At <dl>7:00 PM</dl>
+                            </li>
+                            <li><strong>Contact US :</strong>
+                                300 CONCORD PARKWAY SOUTH
+                                CONCORD, NC 28027
+                                PHONE: (800) 933-2210
+                                FAX: (800) 950-4378
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>Dubai</h3>
+                        <img src="./img/dubai.jpg" alt="" width="200px" height="200px">
+                        <ul>
+                            <li><strong>Address :</strong>
+                                <address>
+                                    16992, Cluster U
+                                    Dubai,UAE, (AE)
+                                    25.07966235,55.1514906
+                                </address>
+                            </li>
+                            <li>
+                                Open At <em>6:00 AM</em> Close At <dl>7:00 PM</dl>
+                            </li>
+                            <li><strong>Contact US :</strong>
+                                300 CONCORD PARKWAY SOUTH
+                                CONCORD, NC 28027
+                                PHONE: (800) 933-2210
+                                FAX: (800) 950-4378
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>Paris</h3>
+                        <img src="./img/paris.jpg" alt="" width="200px" height="200px">
+                        <ul>
+                            <li><strong>Address :</strong>
+                                <address>
+                                    6204326127 Rylan Inlet
+                                    Paris-Rhône-Alpes, Ain
+                                    France, FR
+                                </address>
+                            </li>
+                            <li>
+                                Open At <em>6:00 AM</em> Close At <dl>7:00 PM</dl>
+                            </li>
+                            <li><strong>Contact US :</strong>
+                                300 CONCORD PARKWAY SOUTH
+                                CONCORD, NC 28027
+                                PHONE: (800) 933-2210
+                                FAX: (800) 950-4378
+                            </li>
+                        </ul>
+                    </li>
+                    <li>
+                        <h3>Lima</h3>
+                        <img src="./img/lima.jpg" alt="" width="200px" height="200px">
+                        <ul>
+                            <li><strong>Address :</strong>
+                                <address>
+                                    7401 ,Dallas Ports
+                                    Loreto,560013-32225 ,Lima
+                                    Peru, PE
+                                </address>
+                            </li>
+                            <li>
+                                Open At <em>6:00 AM</em> Close At <dl>7:00 PM</dl>
+                            </li>
+                            <li><strong>Contact US :</strong>
+                                300 CONCORD PARKWAY SOUTH
+                                CONCORD, NC 28027
+                                PHONE: (800) 933-2210
+                                FAX: (800) 950-4378
+                            </li>
+                        </ul>
+                    </li>
+                </ul>
+            </div>
         </section>
-        
+        <section class="container">
+
+            <ul class="threeImg">
+                <li><img src="./img/chinook.jpg" alt="" width="300px" height="300px"></li>
+                <li><img src="./img/cutter.jpeg" alt="" width="300px" height="300px"></li>
+                <li><img src="./img/family.jpg" alt="" width="300px" height="300px"></li>
+                <li><img src="./img/fish.jpg" alt="" width="300px" height="300px"></li>
+                <li><img src="./img/frosted-cookie.jpg" alt="" width="300px" height="300px"></li>
+                <li><img src="./img/shirt.jpg" alt="" width="300px" height="300px"></li>
+            </ul>
+        </section>
     </main>
     <footer></footer>
-    <pre>
-    </pre>
+    <pre></pre>
     <script src="./js/app.js"></script>
-
 </body>
 
 </html>
