--- a/sales.html
+++ b/sales.html
@@ -1,21 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="./css/reset.css">
     <link rel="stylesheet" href="./css/style.css">
-    <title>Pat`s  Salmon Sales Cookies</title>
+    <title>Pat`s Salmon Sales Cookies</title>
 </head>
-<body class="container-sales">
+
+<body>
     <header>
         <nav>
             <ul class="top">
                 <li>
                     <img src="./img/salmon.png" alt="salmon logo" width="100" height="60">
                 </li>
-                <h3><strong>Pat`s  Salmon Cookies</strong> Coffe</h3>
+                <h3><strong>Pat`s Salmon Cookies</strong> Coffe</h3>
                 <li class="center">
                     <ul>
                         <li><a href="./index.html">Home</a></li>
@@ -39,11 +42,13 @@
             </ul>
         </nav>
     </header>
-    <main>
+    <pre></pre>
+    <main class="container-sales">
         <h2>Salmon Sales Cookies</h2>
         <section id="sales"></section>
     </main>
     <footer></footer>
     <script src="./js/app.js"></script>
 </body>
+
 </html>
