add new location

--- a/sales.html
+++ b/sales.html
@@ -46,6 +46,22 @@
     <main class="container-sales">
         <h2>Salmon Sales Cookies</h2>
         <section id="sales"></section>
+        <section style="margin-left: 30%;">
+            <form id="newLocation" class="form-style">
+                <fieldset>
+                    <legend>Add New Location</legend>
+                    <label for="locationName">Location name :</label>
+                    <input type="text" id="locationName" name="locationName" required>
+                    <label for="minNumber">The minimum number of customers per hour :</label>
+                    <input type="text" id="minNumber" name="minNumber" required>
+                    <label for="maxNumber">The maximum number of customers per hour :</label>
+                    <input type="text" id="maxNumber" name="maxNumber" required>
+                    <label for="avgNumber">The average number of cookies purchased per customer :</label>
+                    <input type="text" id="avgNumber" name="avgNumber" required>
+                    <input type="submit" value="Add New Location">
+                </fieldset>
+            </form>
+        </section>
     </main>
     <footer></footer>
     <script src="./js/app.js"></script>
