add edit button

--- a/sales.html
+++ b/sales.html
@@ -62,6 +62,22 @@
                 </fieldset>
             </form>
         </section>
+        <section>
+            <form id="editLocation" class="form-style">
+                <fieldset>
+                    <legend>Edit Location</legend>
+                    <label for="locationName">Location name :</label>
+                    <input type="text" id="locationName" name="locationName" required>
+                    <label for="minNumber">The minimum number of customers per hour :</label>
+                    <input type="text" id="minNumber" name="minNumber" required>
+                    <label for="maxNumber">The maximum number of customers per hour :</label>
+                    <input type="text" id="maxNumber" name="maxNumber" required>
+                    <label for="avgNumber">The average number of cookies purchased per customer :</label>
+                    <input type="text" id="avgNumber" name="avgNumber" required>
+                    <input type="submit" value="Edit Location">
+                </fieldset>
+            </form>
+        </section>
     </main>
     <footer></footer>
     <script src="./js/app.js"></script>
